--- a/order.html
+++ b/order.html
@@ -1,8 +1,56 @@
+<!DOCTYPE html>
 <html>
-<head>
-	<title>Contact information and orders</title>
-	<meta charset = "UTF-8">
-	<meta name = "author" content = "Daria Semena">
-</head>
-<body></body>
+	<head>
+		<title>Orders</title>
+		<meta charset = "UTF-8">
+		<meta name = "author" content = "Daria Semena">
+	</head>
+	<body>	
+		<table border="2" style="width: 200px;" frame="void">
+			<tr>
+				<td><ul><font size="4" face="Times New Roman">
+					<li><a href="main.html" style="color: brown;">Main</a></li>
+    				<li><a href="type_list.html" style="color: purple;">Types of H/P</a></li>
+    				<li><a href="trade_points.html" style="color: green;">Trade points</a></li>
+				</font></ul></td>
+			</tr>
+		</table>
+
+		<h1 style="text-align: center;">Orders</h1>
+		<p><font size="4" face="Georgia">Here you can find contact information and order some stuff.</font></p>
+		<p><font size="3" face="Georgia"><i>For more information, please contact us by phone or email.</i></font></p>
+
+		<iframe src="map1.jpg" width="500" height="300" frameborder="0" scrolling="auto" style="position: fixed; right: 50px; bottom: 50px;"></iframe>
+
+		<table border="1" cellspacing="2" cellpadding="10" style="margin: 0 auto; text-align: center;">
+			<thead>
+				<tr>
+					<th colspan="3">Customer</th>
+					<th colspan="3">Order</th>
+				</tr>
+				<tr>
+					<th>Name</th>
+					<th>Surname</th>
+					<th>E-mail</th>
+					<th>Product</th>
+					<th>Number</th>
+					<th>Price/1</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td rowspan="2">Daria</td>
+					<td rowspan="2">Semena</td>
+					<td rowspan="2">123 456 789</td>
+					<td>Metal ornamental frame</td>
+					<td>1</td>
+					<td>10</td>
+				</tr>
+				<tr>
+					<td colspan="2" align="right">Total:</td>
+					<td colspan="1">10</td>
+				</tr>
+			</tbody>
+		</table>
+	</body>
 </html>
