--- a/trade_points.html
+++ b/trade_points.html
@@ -1,8 +1,28 @@
+<!DOCTYPE html>
 <html>
-<head>
-	<title>Contact information and trade points</title>
-	<meta charset = "UTF-8">
-	<meta name = "author" content = "Daria Semena">
-</head>
-<body></body>
+	<head>
+		<title>Trade points</title>
+		<meta charset="UTF-8">
+		<meta name="author" content="Daria Semena">
+	</head>
+	<body>	
+		<table border="2" style="width: 200px;" frame="void">
+			<tr>
+				<td><ul><font size="4" face="Times New Roman">
+					<li><a href="main.html" style="color: brown;" target="_blank">Main</a></li>
+					<li><a href="type_list.html" style="color: purple;" target="_blank">Types of H/P</a></li>
+					<li><a href="order.html" style="color: orange;" target="_blank">Orders</a></li>
+				</font></ul></td>
+			</tr>
+		</table>
+
+		<h1 style="text-align: center;">Trade points</h1>
+		<p><font size="4">Here you can find trade points where you can buy some stuff.</font></p>
+		
+		<h2 style="text-align: center;">Map</h2>
+		
+		<div style="text-align: center;"><a href="map1.jpg" target="_blank"><img src="map1.jpg" alt="Your Image" ></a></div>
+
+		<p><font color="red" size="3"><i>For more information, please contact us by phone or email.</i></font></p>
+	</body>
 </html>
