--- a/type_list.html
+++ b/type_list.html
@@ -1,8 +1,71 @@
+<!DOCTYPE html>
 <html>
-<head>
-	<title>Typos of hm products</title>
-	<meta charset = "UTF-8">
-	<meta name = "author" content = "Daria Semena">
-</head>
-<body></body>
+	<head>
+		<title>Typos of hm products</title>
+		<meta charset = "UTF-8">
+		<meta name = "author" content = "Daria Semena">
+	</head>
+	<body>
+		<table border="2" style="width: 200px;" frame="void">
+			<tr>
+				<td><ul><font size="4" face="Times New Roman">
+					<li><a href="main.html" style="color: brown;">Main</a></li>
+					<li><a href="order.html" style="color: orange;">Orders</a></li>
+					<li><a href="trade_points.html" style="color: green;">Trade points</a></li>
+				</font></ul></td>
+			</tr>
+		</table>
+
+		<h1 style="text-align: center;">Types of Handmade Products</h1>
+		<a name="Here"></a>
+		<p><font size = "4"><b>Here you can find handmade products of different types.</b></font></p>
+
+		<table border="1" style="margin: 0 auto; text-align: center; width: 1000px;">
+			<tr>
+				<th colspan="4" style="background-color: gray;">Types of material</th>
+			</tr>
+			<tr>
+				<td><a href="im1.jpg" target="_blank"><img src="im1.jpg" alt="Image 1" width="250" height="190"></a></td>
+				<td><a href="im2.jpg" target="_blank"><img src="im2.jpg" alt="Image 2" width="250" height="190"></a></td>
+				<td><a href="im3.jpg" target="_blank"><img src="im3.jpg" alt="Image 3" width="250" height="190"></a></td>
+				<td><a href="im4.jpg" target="_blank"><img src="im4.jpg" alt="Image 4" width="250" height="190"></a></td>
+			</tr>
+			<tr>
+				<td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Metal</a></td>
+				<td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Wood</a></td>
+				<td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Paper</a></td>
+				<td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Plastic</a></td>
+			</tr>
+			<tr>
+				<td align="left">High-quality items crafted from various metals, offering durability and a sleek aesthetic.</td>
+				<td align="left">Unique creations made from carefully selected wood, showcasing natural beauty and craftsmanship.</td>
+				<td align="left">Delicate and intricate pieces crafted from paper, combining artistry with the fragility of the material.</td>
+				<td align="left">Innovative and modern creations using versatile plastic materials, providing functionality and style.</td>
+			</tr>
+		</table>
+		
+		<table border="1" style="margin: 0 auto; margin-top: 50px; text-align: center;  width: 1000px;">
+			<tr>
+				<th colspan="4" style="background-color: gray;">Types of product</th>
+			</tr>
+			<tr>
+				<td><a href="im5.jpg" target="_blank"><img src="im5.jpg" alt="Image 5" width="250" height="190"></a></td>
+				<td><a href="im7.jpg" target="_blank"><img src="im7.jpg" alt="Image 7" width="250" height="190"></a></td>
+				<td><a href="im6.jpg" target="_blank"><img src="im6.jpg" alt="Image 6" width="250" height="190"></a></td>
+				<td><a href="im8.jpg" target="_blank"><img src="im8.jpg" alt="Image 8" width="250" height="190"></a></td>
+			</tr>
+			<tr>
+				<td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Jewelry</a></td>
+				<td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Utensil</a></td>
+				<td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Decor</a></td>
+				<td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Toys</a></td>
+			</tr>
+			<tr>
+				<td align="left">Beautiful handcrafted jewelry made with precision and care.</td>
+				<td align="left">Unique handmade dishes for your kitchen and dining experience.</td>
+				<td align="left">Artistic home decor items crafted with attention to detail.</td>
+				<td align="left">Delightful toys made by hand for both kids and adults.</td>
+			</tr>
+		</table>
+	</body>
 </html>
