--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 		<h1 style="text-align: center;">Handmade products</h1>
 		
 		<div style="display: flex; justify-content: center;"><a href="image1.jpg" target="_blank"><img src="image1.jpg" alt="image 1" width="200" height="200"></a></div>
-
+		<!-- строковий контейнер з текстом та посиланням з якорем -->
 		<div class="container"><p><span class="text">Here you can find Handmade Products of <a href="type_list.html#Here" class="link">different types</a>. 
 			<i>Handcrafted jewelry to unique home decor items.</i>
 		</span></p></div>
@@ -32,9 +32,7 @@
 			Navigate through the pages, discover the myriad Types of H/P, place Orders for your bespoke creations, 
 			and explore the network of Trade Points where these treasures find their way to you. As you embark on this creative odyssey, let the vibrant colors and textures awaken your senses.
 		</p>
-
-		
-
+		<!-- змінює фон сторінки на 30 секунд -->
 		<script>
 			document.body.style.backgroundColor = 'lightgrey';
 			setTimeout(() => document.body.style.backgroundColor = '', 30000);
